--- a/pdf417MobiCustomUISample/src/main/res/layout/activity_main.xml
+++ b/pdf417MobiCustomUISample/src/main/res/layout/activity_main.xml
@@ -1,76 +1,198 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:fitsSystemWindows="true"
+    tools:context=".PickDataActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
+        android:layout_width="match_parent"
+        android:fitsSystemWindows="true"
+        android:layout_height="250dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+
+
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/toolbar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:contentScrim="?attr/colorPrimary"
+            app:expandedTitleMarginStart="48dp"
+            app:expandedTitleMarginEnd="64dp"
+            android:fitsSystemWindows="true"
+            app:toolbarId="@id/toolbar"
+
+            app:expandedTitleGravity="center|center_horizontal"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+
+            <ImageView
+                android:id="@+id/expandedImage"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/family_mod"
+                app:layout_collapseMode="parallax"
+                android:fitsSystemWindows="true"
+
+                />
+
+            <com.google.android.material.appbar.MaterialToolbar
+
+                android:id="@+id/toolbar"
+                android:layout_width="wrap_content"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"
+                android:paddingStart="36dp"
+                app:title="Nucleo Familiar" />
+
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity"
-        >
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnDefaultActivity"
-            style="@style/Widget.MaterialComponents.Button.Icon"
+
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:layout_marginStart="36dp"
-            android:layout_marginTop="132dp"
-            android:layout_marginEnd="36dp"
-            android:onClick="scanDocument"
-            android:text="@string/scan_document"
-            app:cornerRadius="20dp"
-            app:icon="@drawable/ic_baseline_camera_alt_24"
-            app:iconGravity="textStart"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_height="match_parent">
 
-            tools:ignore="MissingConstraints" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="771dp"
+                tools:context=".MainActivity">
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="140dp"
-            android:fontFamily="@font/comfortaa_bold"
-            android:text="O"
-            android:textAlignment="center"
-            android:textSize="18dp"
-            app:layout_constraintTop_toBottomOf="@+id/btnDefaultActivity"
-            tools:layout_editor_absoluteX="0dp" />
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/cvTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_marginTop="9dp"
+                    app:cardBackgroundColor="@color/white"
+                    app:cardCornerRadius="45dp"
+                    app:cardElevation="2dp"
+                    app:cardMaxElevation="12dp"
+                    app:cardPreventCornerOverlap="true"
+                    app:cardUseCompatPadding="true"
+                    tools:ignore="MissingConstraints"
+                    tools:layout_editor_absoluteX="33dp">
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnFillForm"
-            style="@style/Widget.MaterialComponents.Button.Icon"
-            android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:layout_marginStart="36dp"
-            android:layout_marginEnd="36dp"
-            android:onClick="fillDocument"
-            android:text="@string/fill_document"
-            app:backgroundTint="#4CAF50"
-            app:cornerRadius="20dp"
-            app:icon="@drawable/ic_baseline_edit_note_24"
-            app:iconGravity="textStart"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"
-            app:layout_constraintVertical_bias="0.38"
-            tools:ignore="MissingConstraints" />
+                    <TextView
+                        android:id="@+id/tvInfoPerson"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom|center_horizontal"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginBottom="20dp"
+                        android:text="FICHA FAMILIAR #12"
+                        android:textColor="@color/teal_600"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                </com.google.android.material.card.MaterialCardView>
 
-    <FrameLayout
-        android:id="@+id/recognizer_runner_view_container"
-        android:layout_width="match_parent"
-        android:visibility="gone"
-        android:layout_height="match_parent"
-        android:padding="40dp"
-        android:background="#AA000000">
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/btnDefaultActivity"
+                    android:layout_width="match_parent"
+                    android:layout_height="204dp"
+                    android:onClick="scanDocument"
+                    app:cardBackgroundColor="@color/white"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="6dp"
+                    app:cardMaxElevation="10dp"
+                    app:cardPreventCornerOverlap="true"
+                    app:cardUseCompatPadding="true"
+                    app:layout_constraintTop_toBottomOf="@+id/cvTitle"
+                    tools:ignore="OnClick"
+                    tools:layout_editor_absoluteX="0dp">
 
-    </FrameLayout>
-</FrameLayout>
+                    <ImageView
+                        android:id="@+id/img"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
+                        android:layout_gravity="center"
+                        android:layout_marginBottom="15dp"
+                        android:contentDescription="@string/app_name"
+                        android:src="@drawable/ic_baseline_camera_alt_24"
+                        android:tint="@color/accent"
+                        android:visibility="visible" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom|center_horizontal"
+                        android:layout_marginBottom="30dp"
+                        android:text="Escanear documento"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/btnFillForm"
+                    android:layout_width="match_parent"
+                    android:layout_height="204dp"
+                    android:onClick="scanDocument"
+                    app:cardBackgroundColor="@color/white"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="6dp"
+                    app:cardMaxElevation="10dp"
+                    app:cardPreventCornerOverlap="true"
+                    app:cardUseCompatPadding="true"
+                    app:layout_anchor="@+id/nestedScrollView"
+                    app:layout_anchorGravity="center"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/btnDefaultActivity"
+                    app:layout_constraintVertical_bias="0.0"
+                    tools:layout_editor_absoluteX="0dp">
+
+                    <ImageView
+                        android:id="@+id/imgNote"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
+                        android:layout_gravity="center"
+                        android:layout_marginBottom="15dp"
+                        android:contentDescription="@string/app_name"
+                        android:src="@drawable/ic_baseline_edit_note_24"
+                        app:tint="@color/teal_700" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom|center_horizontal"
+                        android:layout_marginBottom="30dp"
+                        android:text="Escanear documento"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:visibility="visible" />
+
+
+                </androidx.cardview.widget.CardView>
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <FrameLayout
+                android:id="@+id/recognizer_runner_view_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#AA000000"
+                android:padding="40dp"
+                android:visibility="gone">
+
+            </FrameLayout>
+        </FrameLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
