--- a/pdf417MobiCustomUISample/src/main/res/values/styles.xml
+++ b/pdf417MobiCustomUISample/src/main/res/values/styles.xml
@@ -71,5 +71,10 @@
 
     </style>
 
+    <style name="ShapeAppearanceOverlay.MyApp.Button.Circle" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
+
 
 </resources>
