--- a/pdf417MobiCustomUISample/src/main/res/layout/activity_pick_user_data.xml
+++ b/pdf417MobiCustomUISample/src/main/res/layout/activity_pick_user_data.xml
@@ -94,16 +94,16 @@
                     android:textStyle="bold" />
 
             </com.google.android.material.card.MaterialCardView>
-
+            
             <TextView
-                android:id="@+id/tvRelationship"
+                android:id="@+id/tvDocumentType"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:layout_marginStart="36dp"
                 android:layout_marginTop="-10dp"
                 android:layout_marginEnd="36dp"
                 android:fontFamily="@font/comfortaa_bold"
-                android:text="Parentesco"
+                android:text="Tipo de documento"
                 android:textColor="@color/primary"
                 android:textSize="19dp"
                 android:textStyle="bold"
@@ -111,6 +111,50 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/cvTitle"
+                tools:ignore="NotSibling">
+
+            </TextView>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tiDocumentType"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                android:layout_width="match_parent"
+                android:layout_height="73dp"
+                android:layout_marginStart="36dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="36dp"
+                android:hint="Seleccione una opción"
+                app:hintTextAppearance="@style/TextLabel"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvDocumentType"
+                tools:ignore="MissingConstraints">
+                <AutoCompleteTextView
+                    android:id="@+id/acDocumentType"
+                    android:layout_width="match_parent"
+                    android:layout_height="59dp"
+                    android:inputType="none"
+                    tools:layout_editor_absoluteX="14dp"
+                    tools:layout_editor_absoluteY="68dp" />
+            </com.google.android.material.textfield.TextInputLayout>
+            
+            <TextView
+                android:id="@+id/tvRelationship"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_marginStart="36dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginEnd="36dp"
+                android:fontFamily="@font/comfortaa_bold"
+                android:text="Parentesco"
+                android:textColor="@color/primary"
+                android:textSize="19dp"
+                android:textStyle="bold"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tiDocumentType"
                 tools:ignore="NotSibling">
 
             </TextView>
@@ -165,7 +209,7 @@
         android:layout_height="73dp"
         android:layout_marginStart="36dp"
         android:layout_marginTop="8dp"
-
+        
         android:layout_marginEnd="36dp"
         android:hint="Seleccione una opción"
         app:layout_constraintEnd_toEndOf="parent"
@@ -191,6 +235,7 @@
         android:layout_marginEnd="36dp"
         android:fontFamily="@font/comfortaa_bold"
         android:text="Profesión"
+        
         android:textColor="@color/primary"
         android:textSize="19dp"
         android:textStyle="bold"
@@ -208,6 +253,7 @@
         android:layout_marginStart="36dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="36dp"
+        
         android:hint="Seleccione una opción"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -228,6 +274,7 @@
         android:id="@+id/tvCivilState"
         android:layout_width="match_parent"
         android:layout_height="30dp"
+        
         android:layout_marginStart="36dp"
         android:layout_marginEnd="36dp"
         android:fontFamily="@font/comfortaa_bold"
@@ -248,6 +295,7 @@
         android:layout_marginStart="36dp"
         android:layout_marginEnd="36dp"
         android:hint="Seleccione una opción"
+        
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -273,6 +321,7 @@
         android:layout_marginEnd="36dp"
         android:layout_marginBottom="48dp"
         app:cornerRadius="30dp"
+        
         app:iconGravity="textEnd"
         android:paddingStart="27dp"
         app:icon="@drawable/ic_baseline_keyboard_arrow_right_24"
